--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,26 @@
-/* You can add global styles to this file, and also import other style files */
+::-webkit-scrollbar{
+  width: .6rem;
+  border-radius: .5rem;
+  background-color: hsl(228, 12%, 25%);
+}
+::-webkit-scrollbar-thumb{
+  background-color: hsl(228, 8%, 35%);
+  border-radius: .5rem;
+}
+::-webkit-scrollbar-thumb:hover{
+  background-color: hsl(228, 8%, 45%);
+}
+
+  html {
+    scroll-behavior: smooth;
+  }
+
+  body{
+    background-color: hsl(228, 15%, 15%);
+    color: hsl(228, 8%, 95%);
+  }
+
+  h1, h2, h3, h4, h5, h6{
+    color : hsl(162, 100%, 40%)
+  }
+  
