--- a/src/app/components/home-carousel/home-carousel.component.html
+++ b/src/app/components/home-carousel/home-carousel.component.html
@@ -1,5 +1,4 @@
-<!-- carousel.component.html -->
-<div id="carouselExampleCaptions" class="carousel slide">
+<div id="carouselExampleCaptions" class="carousel slide" data-bs-ride="carousel">
   <div class="carousel-indicators">
     <button *ngFor="let item of images; let i = index"
             type="button"
