--- a/src/app/pages/auth/auth.component.scss
+++ b/src/app/pages/auth/auth.component.scss
@@ -121,14 +121,20 @@
 }
 .forms .form-content .input-box{
   display: flex;
-  align-items: center;
-  height: 50px;
-  width: 100%;
+  flex-direction: column;
+  align-items: flex-start;
   margin: 10px 0;
   position: relative;
 }
+.input-box input{
+  height: 50px;
+}
+.error-message{
+  color: red;
+  font-size: 12px;
+  margin-top: 5px;
+}
 .form-content .input-box input{
-  height: 100%;
   width: 100%;
   outline: none;
   border: none;
@@ -144,6 +150,9 @@
 }
 .form-content .input-box i{
   position: absolute;
+  top: 50%;
+  left: 10px;
+  transform: translateY(-50%);
   color: #7d2ae8;
   font-size: 17px;
 }
